[package]
name = "gitter"
version = "0.1.0"
authors = ["shmutalov <shmutalov@gmail.com>"]

homepage = "https://github.com/shmutalov/gitter-rs"
repository = "https://github.com/shmutalov/gitter-rs"

description = "A library that provides Gitter API"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["gitter", "api", "chat"]

[dependencies]
chrono = { version = "=0.3.0", features = ["serde"] }
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
serde_urlencoded = "0.4"
reqwest = "0.5.2"
