[package]
name = "gitter"
version = "0.1.2"
authors = ["shmutalov <shmutalov@gmail.com>"]

homepage = "https://github.com/shmutalov/gitter-rs"
repository = "https://github.com/shmutalov/gitter-rs"

description = "A library that provides Gitter API"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["gitter", "api", "chat"]

exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "shmutalov/gitter-rs" }

[dependencies]
chrono = { version = "=0.3.1", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.5"
reqwest = "0.6.1"
