[package]
name = "faye"
version = "0.1.0"
authors = ["shmutalov <shmutalov@gmail.com>"]
homepage = "https://github.com/shmutalov/gitter-rs"
repository = "https://github.com/shmutalov/gitter-rs"
description = "Faye pub/sub protocol implementation in Rust"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["faye", "bayeux", "websocket"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.7.0"
tungstenite = { version = "0.6.0", features = ["tls"] }